# discord-messages-reader

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  build.py  codecov.yml  manifest.ini  osv-scanner.toml  pyproject.toml  renovate.json  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
appModules/discord/: __init__.py
appModules/discordptb/: __init__.py
tests/: conftest.py  test_announce.py  test_filter.py  test_history.py  test_smoke.py  test_uia.py
