[project]
name = "discord-messages-reader"
version = "0.1.0"
description = "NVDA add-on that announces incoming Discord chat messages automatically via UIA polling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "bandit>=1.9.0",
    "pip-audit>=2.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=appModules --cov-report=term-missing --cov-report=xml --basetemp=.pytest_tmp"

[tool.coverage.run]
source = ["appModules"]
omit = ["appModules/discordptb/*", "appModules/discordcanary/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
# Addon files use tabs (NVDA convention); test files use spaces (PEP 8).
# Ruff's formatter is not run on appModules/ — tabs must be preserved.
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "W191",   # tabs in indentation (addon files use tabs by convention)
    "E101",   # mixed indentation (follows from W191)
    "E501",   # line too long — formatter not used on addon files
    "SIM108", # ternary — sometimes less readable
]

[tool.ruff.lint.per-file-ignores]
# conftest.py installs NVDA stubs before importing project code.
# The late imports are intentional — E402 would be a false positive.
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["discord", "discordptb", "discordcanary"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
platform = "linux"               # match CI; keeps windll/WINFUNCTYPE ignores from being "unused" on Windows
files = ["appModules/discord"]
strict = false
ignore_missing_imports = true    # NVDA and win32 libs have no stubs
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.bandit]
targets = ["appModules"]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert statements — fine outside web endpoints
]
